# rust-wordle

./: .gitignore  Cargo.toml  README.md  main.rs  plot_test.sh  plot_train.sh  test.sh  train.sh  words_5_letters.txt
